--- a/vue_token_auth-master/package.json
+++ b/vue_token_auth-master/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.3.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "crypto-js": "^3.1.9-1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
