--- a/vue_token_auth-master/package.json
+++ b/vue_token_auth-master/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "apexcharts": "^3.6.7",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "crypto-js": "^3.1.9-1",
     "vue": "^2.5.2",
+    "vue-apexcharts": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
